# neural-network-digit-recognition

./: .gitignore  CMakeLists.txt  MatrixManipulation.cpp  MatrixManipulation.h  NetLayer.cpp  NetLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  README.md  googlee6b2b8965da36725 (1).html  main.cpp
app/: main.cpp
data/mnist/: README.md
data/serializable/: 784x100x10-0.05.txt  784x100x10-0.05x2.txt  784x100x10-0.05x3.txt  784x100x10-0.05x4.txt  784x100x10-0.05x5.txt  784x100x10-0.1.txt  784x100x10-0.1x2.txt  784x100x10-0.1x3.txt  784x100x10-0.1x4.txt  784x100x10-0.1x5.txt  784x100x10-0.2.txt  784x100x10-0.2x2.txt  784x100x10-0.2x3.txt  784x100x10-0.2x4.txt  784x100x10-0.3.txt  784x100x10-0.3x2.txt  784x100x10-0.3x3.txt  784x100x10-0.3x4.txt  README.md
include/: MatrixManipulation.h  NetLayer.h
src/: MatrixManipulation.cpp  NetLayer.cpp  NeuralNetwork.cpp
